<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_above="@+id/linearLayout4" />

    <TextView
        android:id="@+id/ListOfCurrencies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="18sp"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/currency"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerCurrency"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/textDate"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ListOfCurrencies"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/textView5"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignRight="@+id/textView5"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="Дата"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Current_Date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onClick"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="105dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Sortbutton1"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/anim_button"
            android:elevation="0dp"
            android:onClick="onClickSortName"
            android:text="@string/button_sort_name1"
            android:textSize="8sp" />

        <Button
            android:id="@+id/Sortbutton2"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/anim_button"
            android:onClick="onClickSortAscending"
            android:text="@string/button_sort_name2"
            android:textSize="8sp" />

        <Button
            android:id="@+id/Sortbutton3"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/anim_button"
            android:onClick="onClickSortDescending"
            android:text="@string/button_sort_name3"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/Loadbutton4"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/Savebutton5"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/spinner6"
            android:layout_weight="0.5"
            android:background="@drawable/anim_button"
            android:elevation="0dp"
            android:gravity="center"
            android:onClick="onClickLoad"
            android:soundEffectsEnabled="true"
            android:text="@string/load_saved_exchange_rates" />

        <Button
            android:id="@+id/Savebutton5"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/anim_button"
            android:gravity="center"
            android:onClick="onClickSave"
            android:soundEffectsEnabled="true"
            android:text="@string/save_exchange_rates" />
    </LinearLayout>

    <fragment
        android:id="@+id/fragment"
        android:name="mobiledimension.exchangerates.FragmentAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ListView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp" />


</RelativeLayout>